--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -60,29 +60,6 @@
       font-size: 10pt;
   }
 
-.container-menu{
-    height: 30px;
-    text-align: center;
-}
-
-.container-menu ul {
-    display: inline-block; 
-    list-style: none;
-}
-  
-.container-menu ul li {
-    text-align: center;
-    float: left;
-}
-
-.container-menu ul li a{
-    display: block;
-    color: black;
-    text-decoration: none;
-    padding: 0px 20px;
-    line-height: 30px
-}
-
 #toast-container{
     top:30px !important;
     right: 20px !important;
@@ -108,4 +85,51 @@
 .input-edit{
     float: right;
     width: 70%;
+}
+
+.container-menu{
+    height: 30px;
+    text-align: center;
+}
+
+.container-menu > ul {
+    display: inline-block; 
+    list-style: none;
+}
+  
+.container-menu > ul > li {
+    text-align: center;
+    float: left;
+}
+
+.container-menu > ul > li a{
+    display: block;
+    color: black;
+    text-decoration: none;
+    padding: 0px 20px;
+    line-height: 30px;
+    text-decoration: solid;
+}
+
+.container-menu > ul > li a:before{
+    display: block;
+    color: black;
+    text-decoration: none;
+    padding: 0px 20px;
+    line-height: 30p;
+    text-decoration: underline;
+}
+
+.container-menu > ul > li a:hover:before,
+.container-menu > ul > li a:focus:before,
+.container-menu > ul > li a:active:before,
+.container-menu > ul > li.current_page_item a:before {
+    text-decoration: solid;
+}
+
+.container-menu > ul > li a:hover:before,
+.container-menu > ul > li a:focus:before,
+.container-menu > ul > li a:active:before,
+.container-menu  > ul > li.current_page_item a {
+    text-decoration: underline;
 }
